public class LibrarySystemMain {
    public static void main(String[] args) {
        // Maak repositories
        //BookRepository bookRepository = new BookRepository();

        //Maak Services
        //BookService bookService = new BookService(bookRepository);

        // Voeg enkele boeken toe
        //Boek b1 = new Book();

    }
}
