package repository;

public class LoanRepository {


}
