package service;
import repository.LoanRepository;

public class LoanService {

    private LoanRepository loanRepository;

    public LoanService(LoanService loanService) {
        this.loanRepository = loanRepository;
    }










}
